1. Basic spring boot security added 2. Custom security added through properties file 3. New class added for Authentication and Authorization by extending WebSecurityConfigurerAdapter, default security is disabled by EnableWebSecurity annotation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=default
 
 spring.activemq.broker-url=http://dev-host:15672
 spring.h2.console.enabled=true
+
+spring.security.user.name=admin
+spring.security.user.password=admin
